[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "0.12.2", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
actix-web = "4.3.1"
dotenvy = "0.15.7"
tokio = { version = "1.31.0", features = ["macros", "rt-multi-thread"] }
