[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
dotenvy = "0.15.7"
tokio = { version = "1.31.0", features = ["macros", "rt-multi-thread"] }
serde = "1.0.186"
diesel = { version = "2.1.0", features = ["postgres", "chrono"] }
